<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/tvNombreDetallePedido"
        android:layout_width="145dp"
        android:layout_height="46dp"
        android:gravity="center_vertical"
        android:text="@string/tvNombreDetallePedido" />

    <ImageButton
        android:id="@+id/ibSumarDetallePedido"
        android:contentDescription="@string/ibSumarDetallePedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/tvCantidadDetallePedido"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/tvCantidadDetallePedido" />

    <ImageButton
        android:id="@+id/ibRestarDetallePedido"
        android:contentDescription="@string/ibRestarDetallePedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_delete" />

</LinearLayout>