<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/iv"
        android:contentDescription="@string/iv"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/icono_carta" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="3dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvNombreDetalleCarta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="@string/tvNombreDetalleCarta"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvPrecioDetalleCarta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvPrecioDetalleCarta" />

    </LinearLayout>

</LinearLayout>
